erDiagram
    auth_users ||--o| store_profiles : "user_id"
    prefectures ||--o{ stores : "prefecture_id"
    staff ||--o{ staff_schedules : "staff_number"
    stores ||--o{ staff_schedules : "store_number"
    stores ||--o{ store_profiles : "store_number"

    auth_users {
        uuid id PK "ユーザーID (Supabase Auth)"
    }

    stores {
        integer id PK "ID"
        bpchar store_number UK "店舗番号"
        text store_name "店舗名"
        integer prefecture_id FK "都道府県ID"
        text address "住所"
        date opening_date "オープン日"
        date closing_date "閉店日"
        timestamptz created_at "作成日時"
        timestamptz updated_at "更新日時"
        time closing_time "閉店時間"
        time opening_time "開店時間"
        float8 latitude "緯度"
        float8 longitude "経度"
        boolean is_drive_thru_available "ドライブスルー利用可能"
    }

    store_profiles {
        integer id PK "ID"
        bpchar store_number FK "店舗番号"
        uuid user_id FK "ユーザーID"
        timestamptz created_at "作成日時"
        timestamptz updated_at "更新日時"
    }

    prefectures {
        integer id PK "ID"
        text name "都道府県名"
    }

    staff {
        varchar staff_number PK "スタッフ番号"
        varchar staff_name "スタッフ名"
        varchar email "メールアドレス"
        varchar phone "電話番号"
        varchar employment_type "雇用形態"
        date hire_date "入社日"
        date termination_date "退職日"
        boolean is_active "有効フラグ"
        timestamptz created_at "作成日時"
        timestamptz updated_at "更新日時"
    }

    staff_schedules {
        bigint id PK "ID"
        date date "日付"
        varchar staff_number FK "スタッフ番号"
        bpchar store_number FK "店舗番号"
        boolean period_1 "第1時間帯勤務"
        boolean period_2 "第2時間帯勤務"
        boolean period_3 "第3時間帯勤務"
        boolean period_4 "第4時間帯勤務"
        boolean period_5 "第5時間帯勤務"
        timestamptz created_at "作成日時"
        timestamptz updated_at "更新日時"
    }

    campaign_settings {
        integer id PK "ID"
        varchar campaign_name UK "キャンペーン名"
        varchar display_name "表示名"
        timestamptz start_date "開始日時"
        timestamptz end_date "終了日時"
        boolean is_active "有効フラグ"
        timestamptz created_at "作成日時"
        timestamptz updated_at "更新日時"
    }
